force-app/main/default/objects/Blueprint_Card__c/Blueprint_Card__c.object-meta.xml
<CustomObject>
    <label>Blueprint Card</label>
    <nameField>
        <displayFormat>BPC-{00000000}</displayFormat>
        <label>Blueprint Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blueprint Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>