force-app/main/default/objects/Blueprint_Card__c/fields/Blueprint_Persona_Step__c.field-meta.xml
<CustomField>
    <fullName>Blueprint_Persona_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blueprint Persona Step</label>
    <referenceTo>Blueprint_Persona_Step__c</referenceTo>
    <relationshipLabel>Blueprint Cards</relationshipLabel>
    <relationshipName>Blueprint_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>