force-app/main/default/objects/Blueprint_Card__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Emotions</fullName>
            </value>
            <value>
                <fullName>Facts and Observations</fullName>
            </value>
            <value>
                <fullName>Goals</fullName>
            </value>
            <value>
                <fullName>Metrics</fullName>
            </value>
            <value>
                <fullName>Opportunities and Ideas</fullName>
            </value>
            <value>
                <fullName>Pain Points</fullName>
            </value>
            <value>
                <fullName>Systems and Key Information</fullName>
            </value>
            <value>
                <fullName>Touchpoints</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>